--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,5 +5,8 @@ function(make_test name)
     add_test(NAME ${name} COMMAND ${name} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
 endfunction()
 
-make_test(test_00 ${PROJECT_SOURCE_DIR}/test/test_00.c)
-make_test(test_01 ${PROJECT_SOURCE_DIR}/test/test_01.c)
+file(GLOB test_sources "${PROJECT_SOURCE_DIR}/test/*.c")
+foreach(test_source ${test_sources})
+    get_filename_component(source_name ${test_source} NAME_WE)
+    make_test(${source_name} ${test_source})
+endforeach()
