--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
+### [GLOBAL] ###
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### [Project] ###
+
 # Project exclude paths
 build/
 .idea
 
-# CMake configure header file
-include/bufep_config.h.in
+# CMake generated configure file
+include/bufep_config.h
+cmake/cmake_uninstall.cmake
