bufep/logger: divided default log macros from debug macros.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ endif()
 configure_file(${PROJECT_SOURCE_DIR}/include/bufep_config.h.in ${PROJECT_SOURCE_DIR}/include/bufep_config.h)
 FILE(GLOB BUFEP_PUBLIC_HEADER "include/*.h")
 
-add_library(bufep SHARED src/bufep.c src/bufep_pmtud.c include/bufep_pmtud.h src/bufep_socket.c include/bufep_socket.h test/test_socket_server.c src/bufep_private.h src/bufep_debug.c include/bufep_debug.h src/bufep_fletcher.c include/bufep_fletcher.h src/bufep_uuidwrapper.c include/bufep_uuidwrapper.h)
-if (WIN32 OR MSVC)
+add_library(bufep SHARED src/bufep.c src/bufep_pmtud.c include/bufep_pmtud.h src/bufep_socket.c include/bufep_socket.h test/test_socket_server.c src/bufep_private.h src/bufep_debug.c include/bufep_debug.h src/bufep_fletcher.c include/bufep_fletcher.h src/bufep_uuidwrapper.c include/bufep_uuidwrapper.h src/bufep_logger.c include/bufep_logger.h)
+if (MSVC)
     target_link_libraries(bufep wsock32 ws2_32)
 elseif(LINUX)
     target_link_libraries(bufep LibUUID)
