--- a/include/bufep_config.h.in
+++ b/include/bufep_config.h.in
@@ -5,13 +5,13 @@
 #define BUFEP_MS_WINDOWS
 #include <BaseTsd.h>
 typedef SSIZE_T ssize_t;
-#elif __APPLE__ || __MACH__
+#elif defined(__APPLE__) || defined(__MACH__)
 #define BUFEP_MAC_OS_X
-#elif __linux__
+#elif defined(__linux__)
 #define BUFEP_LINUX
-#elif __FreeBSD__
+#elif defined(__FreeBSD__)
 #define BUFEP_FREEBSD
-#elif __unix || __unix__
+#elif defined(__unix) || defined(__unix__)
 #define BUFEP_UNIX
 #endif
 
