bufep/uuidwrapper: implemented unix uuid wrapper.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,15 @@ project(libbufep VERSION 0.0.1 LANGUAGES C)
 include(GNUInstallDirs)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+set(LINUX ${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+option(BUFEP_INSTALL_PKGCONFIG "install pkg-config module." ON)
+option(BUFEP_ENABLE_DEBUG "enable bufep debug functions." OFF)
+
 if(LINUX)
     find_package(LibUUID REQUIRED)
 endif()
-
-set(CMAKE_C_STANDARD 99)
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-option(BUFEP_INSTALL_PKGCONFIG "install pkg-config module." ON)
-option(BUFEP_ENABLE_DEBUG "enable bufep debug functions." OFF)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     set(BUFEP_ENABLE_DEBUG ON)
@@ -24,7 +25,7 @@ add_library(bufep SHARED src/bufep.c src/bufep_pmtud.c include/bufep_pmtud.h src
 if (MSVC)
     target_link_libraries(bufep wsock32 ws2_32)
 elseif(LINUX)
-    target_link_libraries(bufep LibUUID)
+    target_link_libraries(bufep ${LibUUID_LIBRARIES})
 endif()
 
 set_target_properties(bufep
