--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,28 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 option(BUFEP_INSTALL_PKGCONFIG "install pkg-config module." ON)
 option(BUFEP_ENABLE_DEBUG "enable bufep debug functions." OFF)
+option(BUFEP_TEST_ALERM "enable the bufep test suite time limit alarm." ON)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     set(LINUX ON)
-else()
+else ()
     set(LINUX OFF)
-endif()
+endif ()
 
-if(LINUX)
+if (LINUX)
     find_package(LibUUID REQUIRED)
-endif()
+endif ()
 
-if(CMAKE_BUILD_TYPE MATCHES Debug)
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+    if (CMAKE_COMPILER_IS_GNUCC OR
+            CMAKE_COMPILER_IS_GNUCXX OR
+            CMAKE_COMPILER_IS_CLANG)
+        include(CodeCoverage)
+        APPEND_COVERAGE_COMPILER_FLAGS()
+        setup_target_for_coverage_gcovr_sonarqube(NAME coverage EXECUTABLE ctest -j2 --output-on-failure --force-new-ctest-process --progress)
+    endif ()
     set(BUFEP_ENABLE_DEBUG ON)
-endif()
+endif ()
 
 configure_file(${PROJECT_SOURCE_DIR}/include/bufep_config.h.in ${PROJECT_SOURCE_DIR}/include/bufep_config.h)
 FILE(GLOB BUFEP_PUBLIC_HEADER "include/*.h")
@@ -29,9 +37,14 @@ FILE(GLOB BUFEP_PUBLIC_HEADER "include/*.h")
 add_library(bufep SHARED src/bufep.c src/bufep_pmtud.c include/bufep_pmtud.h src/bufep_socket.c include/bufep_socket.h test/test_socket_server.c src/bufep_private.h src/bufep_debug.c include/bufep_debug.h src/bufep_fletcher.c include/bufep_fletcher.h src/bufep_uuidwrapper.c include/bufep_uuidwrapper.h src/bufep_logger.c include/bufep_logger.h)
 if (MSVC)
     target_link_libraries(bufep wsock32 ws2_32 rpcrt4)
-elseif(LINUX)
+elseif (LINUX)
     target_link_libraries(bufep ${LibUUID_LIBRARIES})
-endif()
+    if (CMAKE_BUILD_TYPE MATCHES Debug AND (CMAKE_COMPILER_IS_GNUCC OR
+            CMAKE_COMPILER_IS_GNUCXX OR
+            CMAKE_COMPILER_IS_CLANG))
+        target_link_libraries(bufep gcov)
+    endif ()
+endif ()
 
 set_target_properties(bufep
         PROPERTIES SOVERSION
@@ -53,7 +66,7 @@ install(TARGETS bufep
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bufep)
 
-if(BUFEP_INSTALL_PKGCONFIG)
+if (BUFEP_INSTALL_PKGCONFIG)
     set(prefix ${CMAKE_INSTALL_PREFIX})
     set(exec_prefix ${CMAKE_INSTALL_PREFIX})
     set(libdir ${CMAKE_INSTALL_FULL_LIBDIR})
@@ -63,9 +76,9 @@ if(BUFEP_INSTALL_PKGCONFIG)
     configure_file(bufep.pc.in bufep.pc)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/bufep.pc
             DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig)
-endif()
+endif ()
 
-if(NOT TARGET uninstall)
+if (NOT TARGET uninstall)
     configure_file(
             "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
             "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake"
@@ -73,7 +86,7 @@ if(NOT TARGET uninstall)
 
     add_custom_target(uninstall
             COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake)
-endif()
+endif ()
 
 if (NOT BUFEP_DISABLE_TESTS)
     enable_testing()
@@ -83,6 +96,6 @@ if (NOT BUFEP_DISABLE_TESTS)
                 COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:bufep> "${CMAKE_CURRENT_BINARY_DIR}/test/"
                 COMMENT "Copy dll file to ${CMAKE_CURRENT_BINARY_DIR} directory" VERBATIM
                 )
-    endif()
+    endif ()
     add_subdirectory(test)
-endif()
+endif ()
