bufep: added test suite timeout alarm condition.
Signed-off-by: hurrhnn <20sunrin022@sunrint.hs.kr>

--- a/include/bufep_config.h.in
+++ b/include/bufep_config.h.in
@@ -34,5 +34,6 @@ typedef SSIZE_T ssize_t;
 #endif
 
 #cmakedefine01 BUFEP_ENABLE_DEBUG
+#cmakedefine01 BUFEP_TEST_ALERM
 
 #endif //LIBBUFEP_BUFEP_CONFIG_H
